--- a/responsivewebdesign/projects/product/product.html
+++ b/responsivewebdesign/projects/product/product.html
@@ -55,5 +55,42 @@
   </section>
   
   <section id="pricing">
-    
+     <section id="pricing">
+      <div class="product" id="fixed">
+        <div class="level">Fixed Blade No Sheath</div>
+        <h2>$200</h2>
+        <ol>
+          <li>S30V Blade</li>
+          <li>Mahogany Handle</li>
+          <li>5" Blade Length</li>
+          <li>10.5" Overall Length</li>
+          <li>Weighs 12 oz</li>
+        </ol>
+        <button id="button1" class="btn">Reserve</button>
+      </div>
+      <div class="product" id="fixed-sheath">
+        <div class="level">Fixed Blade with Leather Sheath</div>
+        <h2>$300</h2>
+        <ol>
+          <li>S30V Blade</li>
+          <li>Mahogany Handle</li>
+          <li>5" Blade Length</li>
+          <li>10.5" Overall Length</li>
+          <li>Custom Molded Leather Sheath</li>
+          <li>Weighs 12 oz, 15 oz with sheath</li>
+        </ol>
+        <button class="btn">Reserve</button>
+      </div>
+      <div class="product" id="custom">
+        <div class="level">Customize Your Own Knife</div>
+        <h2>Price Varies</h2>
+        <ol>
+          <li>Choose your blade steel</li>
+          <li>Choose your handle material</li>
+          <li>Choose your blade shape</li>
+          <li>Help us create a knife to suit your needs!</li>
+        </ol>
+        <button id="button2" class="btn">Reserve</button>
+      </div>
+    </section>
   </section>
